spacing fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -134,7 +134,7 @@ li:hover, .logo:hover{
 }
 .about{
     display: grid;
-    grid-template-columns: 20% 50%;
+    grid-template-columns: 20% 60%;
     column-gap: 1rem;
 }
 .about-title{
